# QLink

./: .env  CMakeLists.txt  README.md  main.cpp
code/: CMakeLists.txt  main.cpp  resources.qrc  run_tests.sh  sample_model.json
code/core/ai/: AIAssistant.cpp  AIAssistant.h  CommonNeighborPredictor.cpp  CommonNeighborPredictor.h  ILinkPredictor.cpp  ILinkPredictor.h  JaccardCoefficientPredictor.cpp  PreferentialAttachmentPredictor.cpp  PreferentialAttachmentPredictor.h
code/core/common/: DataStructures.h  QLinkException.h
code/core/model/: MentalModel.cpp  MentalModel.h  Relationship.h
code/core/nlp/: CommandFactory.cpp  CommandFactory.h  Commands.cpp  Commands.h  ICommand.h
code/core/persistence/: ModelManager.h
code/resources/styles/: modern.qss
code/tests/: CMakeLists.txt
code/tests/ai/: test_CommonNeighborPredictor.cpp  test_JaccardCoefficientPredictor.cpp  test_PreferentialAttachmentPredictor.cpp
code/tests/model/: test_Concept.cpp  test_MentalModel.cpp  test_Relationship.cpp
code/tests/nlp/: test_CommandFactory.cpp  test_Commands.cpp
code/ui/: GraphWidget.cpp  GraphWidget.h  MainWindow.cpp  MainWindow.h  SuggestionPanel.cpp  SuggestionPanel.h
core/ai/: AIAssistant.cpp  CommonNeighborPredictor.cpp  CommonNeighborPredictor.h  ILinkPredictor.cpp  ILinkPredictor.h  JaccardCoefficientPredictor.cpp  JaccardCoefficientPredictor.h  PreferentialAttachmentPredictor.cpp  PreferentialAttachmentPredictor.h
core/model/: Concept.cpp  Concept.h  Relationship.cpp  Relationship.h
core/nlp/: Commands.cpp
core/persistence/: ModelManager.cpp
docs/: INSTALL.md  class_diagram.puml
tests/: test_main.cpp
ui/: SuggestionPanel.h
